syntax = "proto3";
package schema.v2;

import "v2/project_source.proto";

message FrontendUIChanges {
	int32 project_generate_queue_id = 1;
	repeated ProjectSource.Table tables = 2;
	repeated ProjectSource.Relation relations = 3;
	ProjectSource project_source = 4;
	BlockDiff block_diff = 5;
	Git git = 6;
	optional ImportBy import_by = 7;
	optional GenerateSource generate_source = 8;
  oneof data {
		HtmlPageInfo html = 9;
		FigmaInfo figma = 10;
	}

  message HtmlPage {
    int32 id = 1;
    string html = 2;
  }
  message FigmaPage {
    string node_id = 1;
  }
  message HtmlPageInfo {
		repeated HtmlPage pages = 1;
  }

  message FigmaInfo {
    string access_token = 1;
    string file_key = 2;
    repeated FigmaPage pages = 3;
  }
}

message FrontendUIChangesResponse {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  Module module = 3;
  Status status = 4;
  int32 token_usage = 5;
  string error_message = 7;

  enum Module {
    FIGMA_TO_CODE = 0;
    HTML_TO_CODE = 1;
  }

  enum Status {
    STARTED = 0;
    INPROGRESS = 1;
    SUCCEEDED = 2;
    FAILED = 3;
  }
}
